<resources>
    <string name="app_name">EcommerceApp</string>
    <string name="better_search">Better Search</string>
    <string name="add_them_into_your_basket">add them into you basket now</string>
    <string name="variety_of_n_goods">Variety of \n goods</string>
    <string name="perform_a_quicker_search">perform a quicker search</string>
    <string name="account_n_management">Account \n management</string>
    <string name="login_in_a_safe_way">login in a safe way</string>
    <string name="go">go</string>
    <string name="welcome">Welcome</string>
    <string name="skip">skip</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="email_id">Email Id</string>
    <string name="enter_your_email_here">enter your email here</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="password">password</string>
    <string name="i_don_t_have_an_account">I DON\'T HAVE AN ACCOUNT</string>
    <string name="register">REGISTER</string>
    <string name="full_name">Full name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="welcome_full_name">Welcome full name</string>
    <string name="_1_9999_9999_99">1-9999-9999-99</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="super_cart">SUPER CART</string>
    <string name="category_item">Category item</string>
    <string name="sub_category">sub category</string>
    <string name="product_title">Product title</string>
    <string name="price_preview">$ 200</string>
    <string name="product_descriptions">product descriptions :********</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="category_name">Category name</string>
    <string name="specifications">Specifications</string>
    <string name="specification_name">specification name</string>
    <string name="specification_description">specification description</string>
    <string name="user_reviews">User Reviews</string>
    <string name="user_name">user name</string>
    <string name="review_title">Review title</string>
    <string name="checkout">checkout</string>
    <string name="total_bill_amount">Total Bill Amount</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="amount">Amount</string>
    <string name="next">next</string>
    <string name="address_type">Address type</string>
    <string name="address_info">address info</string>
    <string name="select_delivery_address">Select Delivery Address</string>
    <string name="add_address">add address</string>
    <string name="address_title">Address Title</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="payment_description">payment description</string>
    <string name="select_payment_option">Select Payment Option</string>
    <string name="switch_theme">switch theme </string>
    <string name="cart_items">Cart Items</string>
    <string name="payment_option">Payment Option</string>
    <string name="confirm_and_place_order">Confirm and Place Order</string>
    <string name="purchased_items">Purchased Items</string>
    <string name="cancel_order">cancel order</string>
    <string name="order_id">Order ID</string>
    <string name="_3246">#3246</string>
    <string name="order_status">Order status</string>
    <string name="confirmed">Confirmed</string>
    <string name="deliver_to">Deliver To:</string>
    <string name="order_placed_at">Order Placed At:</string>
</resources>