<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.fragment.checkout.PlaceOrderFragment">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/static_tv_order_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/order_id"
            android:padding="@dimen/_10dp"
            style="@style/CartTitle"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_order_id"
            android:padding="@dimen/_10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/static_tv_order_id"
            app:layout_constraintStart_toEndOf="@id/static_tv_order_id"
            android:text="@string/_3246"
            style="@style/ProductTitle2"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/static_tv_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_status"
            style="@style/StaticText"
            app:layout_constraintTop_toBottomOf="@id/static_tv_order_id"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/_10dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ProductTitle"
            android:text="@string/confirmed"
            app:layout_constraintTop_toTopOf="@id/static_tv_order_status"
            app:layout_constraintStart_toEndOf="@id/static_tv_order_status"
            android:padding="@dimen/_10dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/static_tv_cart_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/purchased_items"
            android:padding="@dimen/_10dp"
            style="@style/StaticText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/static_tv_order_status" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_cart_items_confirmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/checkout_item"
            app:layout_constraintTop_toBottomOf="@id/static_tv_cart_items"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/static_tv_total_bill_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CartTitle"
            android:text="@string/total_bill_amount"
            app:layout_constraintTop_toBottomOf="@id/rv_cart_items_confirmed"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/_5dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_preview"
            android:padding="@dimen/_5dp"
            style="@style/ProductTitle2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_cart_items_confirmed" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/static_tv_deliver_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delivery Address"
            android:padding="@dimen/_10dp"
            style="@style/StaticText"
            app:layout_constraintTop_toBottomOf="@id/static_tv_total_bill_amount"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_delivery_section"
            android:layout_margin="@dimen/_10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/static_tv_deliver_address"
            android:background="@drawable/static_item_background">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/StaticText"
                android:padding="@dimen/_5dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_address_content"
                android:layout_width="@dimen/_0dp"
                android:layout_height="wrap_content"
                android:text="@string/address_info"
                app:layout_constraintTop_toBottomOf="@id/tv_address_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                style="@style/StaticText"
                android:padding="@dimen/_5dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/static_tv_payment_option"
            android:text="@string/payment_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:padding="@dimen/_10dp"
            style="@style/StaticText"
            app:layout_constraintTop_toBottomOf="@id/layout_delivery_section"
            app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_payment_option"
            android:text="@string/select_payment_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:padding="@dimen/_10dp"
            style="@style/StaticText"
            app:layout_constraintTop_toBottomOf="@id/layout_delivery_section"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel_order"
            style="@style/PrimaryButton"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/static_tv_payment_option" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>